[package]
name = "traceforge"
edition = "2021"
license = "Apache-2.0"
description = "TraceForge is a model checker for concurrent and distributed programs written in Rust"
repository = "https://github.com/awslabs/TraceForge"
keywords = ["model-checking", "message-passing", "thread", "async", "verification"]
categories = ["concurrency", "development-tools::testing"]

version = "0.2.1"

exclude = ['/target' ]

[dependencies]
scoped-tls = "1.0.0"
generator = "0.7.1"
bitvec = "1.0.1"
smallvec = "1.6.1"
dyn-clone = "1.0.9"
num_cpus = "1.15"
rand = "0.10"
rand_pcg = "0.10"
exitcode = "1.1.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"
traceforge-macros = { path="../traceforge-macros", version = "0.1" }
log = { version = "0.4", features = ["release_max_level_off"] }
dyn-hash = "0.2.0"
dyn-eq = "0.1.3"
merging-iterator = "1.3.0"
bytes = "1.10"
indexmap = "2.12"
tokio ={ version = "1.50", features = ["full"] }
rayon = "1.7"

[dev-dependencies] 
serial_test = "3.4.0"
num-integer = "0.1"
simplelog = "^0.12.0"
lazy_static = "1.4.0"

[features]
default = ["print_vals"]
print_stamps = []
print_vals = []
print_vals_custom = []

